feat: compression via mp3 for python

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SPLEETER_API_URL=http://localhost:5000
-SPLEETER_SERVER_KEY=SUPER_S3CRET_KEY_DO_NOT_EXPOSE # used to ensure no one else can access the spleeter api, so they cant create their own jobs w/o main api
+SPLEETER_SERVER_KEY=RMKEY_LMAO_4353543nfbsSDG!nfds # used to ensure no one else can access the spleeter api, so they cant create their own jobs w/o main api
 
 MAIN_SERVER_URL=http://localhost:8001
