--- a/spleeter-server/requirements.txt
+++ b/spleeter-server/requirements.txt
@@ -2,8 +2,10 @@ spleeter==2.4.0
 flask
 requests==2.31.0
 librosa==0.10.0
-soundfile==0.12.1
+soundfile
 numpy==1.23.5
+pydub
 gunicorn==20.1.0
 werkzeug==2.3.6
 protobuf==3.20.3
+redis[hiredis]
