--- a/spleeter-server/docker-compose.yml
+++ b/spleeter-server/docker-compose.yml
@@ -19,5 +19,5 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              device_ids: ['0']
+              device_ids: ["0"]
               capabilities: [gpu]
