--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 SPLEETER_API_URL=http://localhost:5000
 SPLEETER_SERVER_KEY=SUPER_S3CRET_KEY_DO_NOT_EXPOSE # used to ensure no one else can access the spleeter api, so they cant create their own jobs w/o main api
 
-MAIN_SERVER_URL=http://localhost:8001
+VITE_MAIN_SERVER_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173 # vite instance
 
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/aura_music_mixer
