--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-spring/web": "^10.0.1",
     "@tailwindcss/vite": "^4.1.10",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
     "motion": "^12.18.1",
     "prettier": "^3.5.3",
