--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "yarn ready && tsc",
     "start": "node dist/index.js",
     "dev": "tsx watch index.ts",
-    "dev:debug": "tsx watch --inspect index.ts"
+    "dev:debug": "tsx watch --inspect index.ts",
+    "ready": "prisma generate"
   },
   "keywords": [],
   "author": "",
