--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "id3js": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
     "motion": "^12.18.1",
@@ -34,6 +35,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.6.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
