--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,15 @@
     "@prisma/client": "^6.9.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/multer": "^1.4.13",
     "@types/node": "^24.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.10",
+    "prettier": "^3.5.3",
     "prisma": "^6.9.0",
     "socket.io": "^4.8.1",
     "tsx": "^4.20.3",
